[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c3media"
version = "0.1.0"
description = "A Python client for the media.ccc.de API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Nicolas Iderhoff", email = "hello@niid.xyz" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.1",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/niderhoff/c3media.git"
Repository = "https://github.com/niderhoff/c3media.git"

[tool.hatch.build.targets.wheel]
packages = ["c3media"] 

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pre-commit-uv>=4.1.4",
    "ruff>=0.11.9",
    "types-requests>=2.32.0.20250328",
]

[tool.mypy]
python_version = "3.12"
strict = true          
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]
